--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Include Sereal::Encoder and Sereal::Decoder versions in tests for debugging purposes
 
 0.002     2017-06-04 16:55:27 EDT
   - Add use_sereal option to simplify using Sereal for data serialization
