--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fix syntax oddity occasionally causing use_sereal serialization to fail
 
 0.003     2017-06-08 02:27:13 EDT
   - Include Sereal::Encoder and Sereal::Decoder versions in tests for debugging purposes
