--- a/README.pod
+++ b/README.pod
@@ -30,9 +30,9 @@ L</"subprocess"> helper method to your application, which uses
 L<Mojo::IOLoop::Subprocess> to perform computationally expensive operations in
 subprocesses without blocking the event loop.
 
-The option C<use_sereal> (requires L<Sereal> version 3.001 or higher) will use
-L<Sereal> for data serialization, which is faster than L<Storable> and supports
-serialization of more reference types such as C<Regexp>. The
+The option C<use_sereal> (requires L<Mojo::IOLoop::Subprocess::Role::Sereal>)
+will use L<Sereal> for data serialization, which is faster than L<Storable> and
+supports serialization of more reference types such as C<Regexp>. The
 L<Sereal::Encoder/"FREEZE/THAW CALLBACK MECHANISM"> is supported to control
 serialization of blessed objects.
 
