--- a/README.pod
+++ b/README.pod
@@ -59,12 +59,10 @@ L<Mojolicious::Plugin::Subprocess> implements the following helpers.
 
 Execute the first callback in a child process with
 L<Mojo::IOLoop::Subprocess/"run">, and execute the second callback in the
-parent process with the results. The callbacks are executed via
-L<Mojolicious::Plugin::DefaultHelpers/"delay">, which disables automatic
-rendering, keeps a reference to the transaction, and renders an exception
-response if an exception is thrown in either callback. This also means that the
-parent callback will not be called if an exception is thrown in the child
-callback.
+parent process with the results. Automatic rendering is disabled, and an
+exception response is rendered if an exception is thrown in either callback.
+This also means that the parent callback will not be called if an exception is
+thrown in the child callback.
 
 =head1 METHODS
 
